iiCt/src/app/about-me/studies/studies.component.css
h1 {
  margin-top: 5rem;
  text-align: center;
}

h6 {
  margin: 0;
  margin-top: 1rem;
}

.serve-images {
  width: 50%;
  margin-top: 1.7rem;
  margin-left: 8rem;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.serve-image1 {
  width: 50%;
  margin-left: 8rem;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.serve-text {
  padding-top: 15px;
  font-size: 2rem;
  text-align: center;
  margin-left: 50px;
  margin-right: 50px;
}

.exp-heading {
  text-align: center;
  padding-bottom: 1rem;
  /* font:   normal bold  "Roboto-Thin", sans-serif */
  font-weight: 700;
}

.chart-image {
  width: 75%;
  margin-top: -19.5rem;
  margin-left: 11.5rem;
  z-index: -10;
  opacity: 35%;
}

.logo-extra {
  width: 75%;
  margin-top: 3rem;
}

.arrows {
  width: 25%;
  margin-top: 4.5rem;
  margin-left: 5rem;

}

.arrows:hover {
  width: 26%;
  margin-top: 4.6rem;
  margin-left: 5.1rem;
}

